--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "15.5.0",
     "podcastdx-client": "^5.1.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
